--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon-tecboard-roxo.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon-tecboard-preto.svg" type="image/svg+xml">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo-tecboard-branco.png" alt="Logo Tecboard na cor branca">
+        <img src="img/logo-tecboard-preto.png" alt="Logo Tecboard na cor branca">
     </header>
     <main>
         <section>
