Adiciona meta tag do google search console

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     
     <title>Tecboard</title>
+
+    <meta name="google-site-verification" content="LPd93cFel_ChzT3P9JaJcgITrQQ1riKAXlRhXL_q0g0" />
 </head>
 <body>
     <header>
